# spacetimeformer

./: EXECUTE.txt  LICENSE  README.md  __init__.py  eval_stats.py  forecaster.py  mdst_transformer.py  plot.py  pyproject.toml  requirements.txt  revin.py  setup.py  time2vec.py
data/: DataGenerator.py  __init__.py  datamodule.py  generate_training_data.py
data/chicago/: __init__.py  chicago.py
data/metr_la/: metr_la.py
docs/: Makefile  conf.py  index.rst
docs/1start/: FAQ.md  api_usage.md  basic-Intro.md  basic-Intro.rst  data_in_out.md  installation.md  references.md  support.md
docs/2demo/: Demo.ipynb  fastDemo.ipynb
docs/apidoc/: fastsk.rst  spacetimeformer.data.metr_la.rst  spacetimeformer.data.pems_bay.rst  spacetimeformer.data.precip.rst  spacetimeformer.data.rst  spacetimeformer.linear_model.rst  spacetimeformer.lr_scheduler.rst  spacetimeformer.lstm_model.rst  spacetimeformer.lstnet_model.rst  spacetimeformer.mtgnn_model.rst  spacetimeformer.rst  spacetimeformer.spacetimeformer_model.nn.rst  spacetimeformer.spacetimeformer_model.rst  spacetimeformer.spacetimeformer_model.utils.rst  transformer_timeseries.data.metr_la.rst  transformer_timeseries.data.precip.rst  transformer_timeseries.data.rst  (+9 more)
lr_scheduler/: warmup_lr_scheduler.py
mdst_transformer_model/: __init__.py  mdst_transformer_model.py
spacetimeformer/: TimeSeriesDataset.py  __init__.py  callbacks.py  eval_stats.py  forecaster.py  plot.py  setup.sh  time2vec.py  train.py  workbench.ipynb
transformer_timeseries/: __init__.py  callbacks.py  forecaster.py  plot.py  time2vec.py  train.py
(+118 files in other folders)
