[tool.poetry]
name = "spacetimeformer"
version = "0.1.0"
description = "QData Research Library for the Spacetimeformer project"
authors = ["jcg6dn@virginia.edu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cython = ">=0.22"
cmdstanpy = "0.9.68"
# https://discourse.mc-stan.org/t/pystan-build-is-not-pep-517-compliant/32971/6
# https://pystan.readthedocs.io/en/latest/faq.html#how-can-i-run-pystan-on-macos-with-apple-silicon-chips-apple-m1-m2-etc
pystan = ">=2.19.1.1,<2.20.0.0"
numpy = ">=1.15.4"
pandas = ">=1.0.4"
matplotlib = ">=2.0.0"
convertdate = ">=2.1.2"
python-dateutil = ">=2.8.0"
performer-pytorch = "^1.1.4"
tqdm = ">=4.36.1"
nystrom-attention = "^0.0.11"
pytorch-lightning = "1.6"
netcdf4 = "^1.6.5"
scikit-learn = "^1.3.2"
omegaconf = "^2.3.0"
seaborn = "^0.13.0"
opencv-python = "^4.8.1.78"
wandb = "^0.16.0"
einops = "^0.7.0"
chardet = "^5.2.0"
opt-einsum = "^3.3.0"
torchmetrics = "0.5.1"
torch = "1.11.0"
torchvision = "0.12.0"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
